--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "date-fns": "^2.29.3",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
+    "moment": "^2.29.4",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-day-picker": "^8.2.1",
+    "react-native": "0.69.5",
+    "react-native-svg": "^13.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
