--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "expo": "~46.0.9",
+    "expo-font": "^10.2.0",
     "expo-status-bar": "~1.4.0",
     "moment": "^2.29.4",
     "react": "18.0.0",
     "react-native": "0.69.5",
-    "react-native-svg": "^13.1.0"
+    "react-native-calendars": "^1.1289.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
