--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^13.0.0",
     "expo": "~46.0.9",
     "expo-font": "^10.2.0",
+    "expo-linear-gradient": "^11.4.0",
     "expo-status-bar": "~1.4.0",
     "moment": "^2.29.4",
     "react": "18.0.0",
